Archive2/ed/51eb160aefee0f/output
main.cpp:6:18: error: use of undeclared identifier 'fixed'; did you mean 'std::fixed'?
    std::cout << fixed << 2.7 << '\n' ; // *** error
                 ^~~~~
                 std::fixed
/usr/include/c++/v1/ios:964:1: note: 'std::fixed' declared here
fixed(ios_base& __str)
^
main.cpp:7:18: error: use of undeclared identifier 'setprecisin'; did you mean 'std::setprecision'?
    std::cout << setprecisin(2) << 2.7 << '\n' ; // *** error
                 ^~~~~~~~~~~
                 std::setprecision
/usr/include/c++/v1/iomanip:233:1: note: 'std::setprecision' declared here
setprecision(int __n)
^
2 errors generated.
